...
            ) {
                when {
                    state.decks.isNotEmpty() -> {
                        LazyColumn(
                            modifier = modifier
                                .fillMaxSize()
                                .testTag("deck_list")
                        ) {
                            items(state.decks, key = { it.id }) { deck ->

                                var visible by remember { mutableStateOf(true) }

                                AnimatedVisibility(
...
                    }
                },
                containerColor = primaryGradientEnd,
                onClick = {
                    onEvent(DeckUiEvent.ShowModal(BodyDeckModalEnum.BODY_INSERT_DECK))
                }) {
                Icon(Icons.Default.Add, contentDescription = "Add", tint = Color.White)
            }
        }
    )
}

    if (state.isLoading){
...
    onEvent: (DeckUiEvent) -> Unit
) {

    val permissionState = rememberNotificationPermissionHandler()

    TextFieldBase(
        modifier = modifier.testTag("text_field_insert_deck"),
        value = state.currentDeck.name,
        onValueChange = { onEvent(DeckUiEvent.UpdateTextFieldInsert(it)) },
        label = stringResource(R.string.label_learn_phrase),
        showCharCounter = true,
        textRestriction = true,
        maxChar = 20,
...
