...
                if (cleaned.countValidChar() <= maxChar) {
                    // Update internal state
                    textFieldValue = newText.copy(text = cleaned)
                    onValueChange(cleaned)
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("text_field_base"),
            label = label?.let { { Text(it) } },
            placeholder = placeholder?.let { { Text(it) } },
            leadingIcon = leadingIcon,
            trailingIcon = trailingIcon,
            singleLine = singleLine,
            maxLines = maxLines,
...
