...
            animation = tween(durationMillis = 2500, easing = LinearEasing),
            repeatMode = RepeatMode.Restart
        ),
        label = "snakeAnim"
    )

    Box(modifier = Modifier.fillMaxSize().testTag("tutorial_base")) {
        content()

        if (isTutorialEnabled && listComponents.isNotEmpty() && currentIndex < listComponents.size) {
            val currentRect = listComponents[currentIndex]

            Canvas(
...
