...
            .swipeable(
                state = swipeableState,
                anchors = anchors,
                thresholds = { _, _ -> FractionalThreshold(0.3f) },
                orientation = Orientation.Horizontal
            )
            .testTag("deck_item")
    ) {
        // Background actions
        Row(
            modifier
                .matchParentSize()
                .padding(3.dp),
...
